[tool.poetry]
name = "disasterlink-backend-python"
version = "0.1.0"
description = "backend"
authors = ["Misbha"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "0.115.5"
uvicorn = "0.27.1"
httpx = "0.27.0"
pydantic = "2.7.4"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
